--- a/code/1_Team/6_循环神经网络.ipynb
+++ b/code/1_Team/6_循环神经网络.ipynb
@@ -141,6 +141,76 @@
     "def init_rnn_state(batch_size, num_hiddens, device):\n",
     "    return (torch.zeros((batch_size, num_hiddens), device=device), )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(X.shape)\n",
+    "print(num_hiddens)\n",
+    "print(vocab_size)\n",
+    "state = init_rnn_state(X.shape[0], num_hiddens, device)\n",
+    "inputs = to_onehot(X.to(device), vocab_size)\n",
+    "params = get_params()\n",
+    "outputs, state_new = rnn(inputs, state, params)\n",
+    "print(len(inputs), inputs[0].shape)\n",
+    "print(len(outputs), outputs[0].shape)\n",
+    "print(len(state), state[0].shape)\n",
+    "print(len(state_new), state_new[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 裁剪梯度\n",
+    "def grad_clipping(params, theta, device):\n",
+    "    norm = torch.tensor([0.0], device=device)\n",
+    "    for param in params:\n",
+    "        norm += (param.grad.data ** 2).sum()\n",
+    "    norm = norm.sqrt().item()\n",
+    "    if norm > theta:\n",
+    "        for param in params:\n",
+    "            param.grad.data *= (theta / norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义预测函数\n",
+    "def predict_rnn(prefix, num_chars, rnn, params, init_rnn_state,\n",
+    "                num_hiddens, vocab_size, device, idx_to_char, char_to_idx):\n",
+    "    state = init_rnn_state(1, num_hiddens, device)\n",
+    "    output = [char_to_idx[prefix[0]]]   # output记录prefix加上预测的num_chars个字符\n",
+    "    for t in range(num_chars + len(prefix) - 1):\n",
+    "        # 将上一时间步的输出作为当前时间步的输入\n",
+    "        X = to_onehot(torch.tensor([[output[-1]]], device=device), vocab_size)\n",
+    "        # 计算输出和更新隐藏状态\n",
+    "        (Y, state) = rnn(X, state, params)\n",
+    "        # 下一个时间步的输入是prefix里的字符或者当前的最佳预测字符\n",
+    "        if t < len(prefix) - 1:\n",
+    "            output.append(char_to_idx[prefix[t + 1]])\n",
+    "        else:\n",
+    "            output.append(Y[0].argmax(dim=1).item())\n",
+    "    return ''.join([idx_to_char[i] for i in output])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_rnn('分开', 10, rnn, params, init_rnn_state, num_hiddens, vocab_size,\n",
+    "            device, idx_to_char, char_to_idx)"
+   ]
   }
  ],
  "metadata": {
